--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script>window.jQuery || document.write('<script src="assets/js/jquery-2.0.3.min.js">\x3C/script>')</script>
     <!--Controles css, js-->
     <script src="assets/js/hogan-2.0.0.min.js"></script>
-    <script src="assets/js/controls/pipeline.min.js"></script>
+    <script src="assets/js/jtools.js"></script>
+    <script src="assets/js/controls/pipeline.js"></script>
+    <script src="assets/js/controls/controlDate.js"></script>
+    <script src="assets/js/controls/ui.js"></script>
     <script src="assets/js/jquery.onepage-scroll.js"></script>
-    <script src="assets/js/script.js"></script>
     <!--Estilos-->
     <link href="assets/css/controls/pipeline.css" rel="stylesheet" />
     <link href="assets/css/sinquehacer.css" rel="stylesheet" />
