Imports, API Iframe Youtube
Added features how imports of HTML5,  used API Iframe of Youtube

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="es" class="no-js">
+<html lang="es">
 <head>
     <title>Sin Que Hacer</title>
     <meta charset="utf-8" />
@@ -10,19 +10,19 @@
     <![endif]-->
     <!--Jquery-->
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-    <script>window.jQuery || document.write('<script src="assets/js/jquery-2.0.3.min.js">\x3C/script>')</script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.0.3.min.js">\x3C/script>')</script>
     <!--Controles css, js-->
-    <script src="assets/js/hogan-2.0.0.min.js"></script>
+    <script src="assets/js/vendor/hogan-2.0.0.min.js"></script>
     <script src="assets/js/jtools.js"></script>
     <script src="assets/js/controls/pipeline.js"></script>
     <script src="assets/js/controls/controlDate.js"></script>
     <script src="assets/js/controls/ui.js"></script>
-    <script src="assets/js/jquery.onepage-scroll.js"></script>
+    <script src="assets/js/vendor/jquery.onepage-scroll.js"></script>
     <!--Estilos-->
     <link href="assets/css/controls/pipeline.css" rel="stylesheet" />
     <link href="assets/css/sinquehacer.css" rel="stylesheet" />
     <!--Javascript-->
-    <script src="assets/js/home.js"></script>
+    <script src="assets/js/home/home.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
