--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.0.3.min.js">\x3C/script>')</script>
     <!--Controles css, js-->
-    <script src="assets/js/vendor/hogan-2.0.0.min.js"></script>
     <script src="assets/js/jtools.js"></script>
     <script src="assets/js/controls/pipeline.js"></script>
     <script src="assets/js/controls/controlDate.js"></script>
     <script src="assets/js/controls/ui.js"></script>
     <script src="assets/js/vendor/jquery.onepage-scroll.js"></script>
+    <script src="assets/js/vendor/owl.carousel.min.js"></script>
     <!--Estilos-->
+    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="assets/css/owl.theme.css" rel="stylesheet" />
     <link href="assets/css/controls/pipeline.css" rel="stylesheet" />
     <link href="assets/css/sinquehacer.css" rel="stylesheet" />
     <!--Javascript-->
     <script src="assets/js/home/home.js"></script>
+    <script src="assets/js/youtube/youtube.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -109,12 +112,20 @@
         </section>
         <section id="list">
             <div class="content">
-                <h1><i class="fa fa-table"></i>Listas</h1>
+                <h1><i class="fa fa-youtube-play"></i>Anime</h1>
                 <article class="description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p>Uso del API Iframe de Youtube, con una lista de videos que se cargan a través de Javascript, mostrados en un Slide utilizando el plugin OWL</p>
                 </article>
                 <article>
-                    
+                    <ul id="dvListVideos" class="owl-carousel owl-theme listVideos"></ul>
+                    <script id="tmpListVideos" type="text/html">
+                        {{#list}}
+                        <li>
+                            <h4>{{title}}</h4>
+                            <div class="video" id="{{videoId}}"></div>
+                        </li>
+                        {{/list}}
+                    </script>
                 </article>
             </div>
         </section>
