--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         </section>
         <section id="list">
             <div class="content">
-                <h1><i class="fa fa-youtube-play"></i>&nbsp;</h1>
+                <h1><i class="fa fa-youtube-play"></i>JSlide</h1>
                 <article class="description">
-                    <p>Uso del API Iframe de Youtube, con una lista de videos que se cargan a través de Javascript, mostrados en un Slide utilizando el plugin OWL</p>
+                    <p>Uso del API Iframe de Youtube, con una lista de videos que se cargan a través de Hogan.js, mostrados en un Slide utilizando el plugin JSlide que esta en proceso de desarrollo.</p>
                 </article>
                 <article id="listVideos" class="listVideos">
                     <a class="btnLeft fa fa-chevron-left fa-2x"></a>
