--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.0.3.min.js">\x3C/script>')</script>
     <!--Controles css, js-->
     <script src="assets/js/jtools.js"></script>
-    <script src="assets/js/controls/pipeline.js"></script>
     <script src="assets/js/controls/controlDate.js"></script>
+    <script src="assets/js/controls/pipeline.js"></script>
+    <script src="assets/js/controls/jslide.js"></script>
     <script src="assets/js/controls/ui.js"></script>
     <script src="assets/js/vendor/jquery.onepage-scroll.js"></script>
-    <script src="assets/js/controls/jslide.js"></script>
     <!--Estilos-->
     <link href="assets/css/controls/pipeline.css" rel="stylesheet" />
     <link href="assets/css/controls/jslide.css" rel="stylesheet" />
     <link href="assets/css/sinquehacer.css" rel="stylesheet" />
     <!--Javascript-->
     <script src="assets/js/home/home.js"></script>
-    <script src="assets/js/youtube/youtube.js"></script>
+    <!--<script src="assets/js/youtube/youtube.js"></script>-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -53,7 +53,7 @@
             <div class="content">
                 <h1><i class="fa fa-list-alt"></i>Formularios</h1>
                 <article class="description">
-                    <p>Crea formularios profesionales para tus webs, controles con validación inmediata con la posibilidad de poner ayuda para cada control. formularios hechos con HTML5 y CSS 3</p>
+                    <p>Crea formularios profesionales para tus webs, controles con validación inmediata con la posibilidad de poner ayuda para cada control. formularios hechos con HTML5 y CSS3</p>
                 </article>
                 <form action="#" id="form">
                     <article class="form">
@@ -88,7 +88,7 @@
                             </li>
                             <li>
                                 <label for="anio">Fecha de nacimiento:</label>
-                                <select id="anio" class="width70px" required="required">
+                                <select id="anio" class="widthAut" required="required">
                                     <option value="">Año</option>
                                 </select>
                                 -
