open for default form

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p>Crea formularios profesionales para tus webs, controles con validación inmediata con la posibilidad de poner ayuda para cada control. formularios hechos con HTML5 y CSS3</p>
                 </article>
                 <form action="#" id="form">
-                    <article class="form">
+                    <article class="form active">
                         <h4><i class="fa fa-chevron-right"></i>Registro</h4>
                         <ul>
                             <li>
