--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                 <li><a class="fa fa-globe" data-index="4">&nbsp;Estadísticos</a></li>
                 <li><a class="fa fa-gamepad" data-index="5">&nbsp;Entrenimiento</a></li>
                 <li><a class="fa fa-user" data-index="6">&nbsp;Yo</a></li>
+                <li class="bRight">
+                    <a href="http://www.w3.org/html/logo/">
+                        <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
