--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Sin Que Hacer</title>
     <meta charset="utf-8" />
+    <meta property="og:title" content="HTML5, CSS3, JS" />
+    <meta property="og:image" content="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" />
+    <meta property="og:description" content="Aplicación de HTML5, CSS3 y JS" />
     <!--Javascript soporte para internet explorer versiones antiguas-->
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
