--- a/drive.html
+++ b/drive.html
@@ -5,8 +5,8 @@
     <title>Drive</title>
     <script src="assets/js/vendor/jquery-2.0.3.min.js"></script>
     <script>
-    	var CLIENT_ID = '244491190056-f41kguq8ccdrhci8u18lk6lu01ut2rr2.apps.googleusercontent.com';
-		var API_KEY = 'AIzaSyCN8ZBCj-RdksGs6pLy8U5-ho4u7oXZvnw';
+    	var CLIENT_ID = '';
+		var API_KEY = '';
 		var SCOPES = 'https://www.googleapis.com/auth/drive';
 
 		function handleClientLoad() {
