--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Sin Que Hacer</title>
+    <title>jerc.js</title>
     <meta charset="utf-8" />
-    <meta property="og:title" content="HTML5, CSS3, JS" />
+    <meta name="keywords" content="jerc, javascript, jquery, programming, julian, estiven, ruiz, castañeda" />
+    <meta name="description" content="jerc's javascript programming" />
+    <meta name="author" content="julian ruiz" />
+    <meta name="layout" content="main" />
+    <link rel="icon" type="image/ico" href="assets/img/html5.ico">
+    <!-- Open Graph -->
+    <meta property="og:title" content="jtools.js" />
     <meta property="og:image" content="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" />
-    <meta property="og:description" content="Aplicación de HTML5, CSS3 y JS" />
-    <!--Javascript soporte para internet explorer versiones antiguas-->
-    <!--[if IE]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
-    <![endif]-->
-    <!--Jquery-->
+    <meta property="og:description" content="jerc's javascript programming" />
+    <!--Estilos-->
+    <link href="assets/css/sinquehacer.css" rel="stylesheet" />
+    <!-- Javascript -->
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.0.3.min.js">\x3C/script>')</script>
     <!--Controles css, js-->
     <script src="assets/js/jtools.js"></script>
     <script src="assets/js/controls/controlDate.js"></script>
-    <script src="assets/js/controls/pipeline.js"></script>
-    <script src="assets/js/controls/jslide.js"></script>
     <script src="assets/js/controls/ui.js"></script>
     <script src="assets/js/vendor/jquery.onepage-scroll.js"></script>
-    <!--Estilos-->
-    <link href="assets/css/controls/pipeline.css" rel="stylesheet" />
-    <link href="assets/css/controls/jslide.css" rel="stylesheet" />
-    <link href="assets/css/sinquehacer.css" rel="stylesheet" />
-    <!--Javascript-->
     <script src="assets/js/home/home.js"></script>
+    <!-- Analytics -->
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-47762731-1', 'jerc91.github.io');
-      ga('send', 'pageview');
-
+        ga('create', 'UA-47762731-1', 'jerc91.github.io');
+        ga('send', 'pageview');
     </script>
+    <!--Javascript soporte para internet explorer versiones antiguas-->
+    <!--[if IE]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
+    <![endif]-->
 </head>
 <body>
     <header>
